<resources>
    <string name="app_name">Polytech 10p5</string>
    <string name="action_settings">Options</string>
    <string name="user">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="validate">Valider</string>
    <string name="quant">Quantité</string>
    <string name="montant">Montant</string>
    <string name="prix">Prix</string>
    <string name="vidange">Vidange</string>
    <string name="passCarte">Passez la carte du client</string>
    <string name="disconnect">Déconnexion</string>
    <string name="connect">Connexion</string>
    <string name="server">Serveur</string>
    <string name="serverTest">Serveur Test</string>
    <string name="serverBar">Serveur Bar</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    
    <array name="server_entries">
        <item>Polytech Bar HTTP</item>
        <item>Beta Test</item>
        <item>Polytech Bar HTTPS</item>
    </array>
    <array name="server_values">
        <item>http://pcbar.insecure.deule.net/</item>
        <item>https://10p5.clubinfo.frogeye.fr/</item>
        <item>https://pcbar.insecure.deule.net/</item>
    </array>

</resources>
