<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/connect"
        android:showAsAction="ifRoom|withText"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/disconnect"
        android:showAsAction="ifRoom|withText"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"
        app:showAsAction="never"><menu>
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_2_choice_1" android:title="Geoffrey"  android:showAsAction="never" android:checked="true" />
        <item android:id="@+id/menu_2_choice_2" android:title="Bar"  android:showAsAction="never" />
    </group>
</menu>
    </item>


</menu>