<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:weightSum="1"
    android:nestedScrollingEnabled="true">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="15"
        android:id="@+id/nb"
        android:editable="true"
        android:elegantTextHeight="true"
        android:enabled="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:numeric="integer"
        android:width="300dp"
        android:hint="@string/quant"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:allowUndo="false"
        android:height="150dp"
        android:minHeight="30dp"
        android:maxHeight="500dp"
        android:minWidth="120dp"
        android:layout_weight="0.04" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:editable="true"
        android:elegantTextHeight="true"
        android:enabled="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:numeric="decimal"
        android:width="300dp"
        android:hint="@string/prix"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:allowUndo="false"
        android:height="250dp"
        android:minHeight="80dp"
        android:maxHeight="500dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:width="150dp"
        android:height="80dp"
        android:onClick="valideCommande"
        android:nestedScrollingEnabled="false" />

</LinearLayout>